--- a/summary/export_templates/pdf.html
+++ b/summary/export_templates/pdf.html
@@ -168,7 +168,7 @@
                 <td style="width:13%;color:white;"><b>Browser</b></td>
             </tr>
             {% for res in details %}
-            <tr style="height: 40pt; vertical-align:center; background-color:{{loop.cycle("#efebe9","#c9c4c1")}};">
+            <tr style="height: 40pt; vertical-align:center; background-color:{{loop.cycle('#efebe9','#c9c4c1')}};">
                 <td style="width:20%;">{{res.email}}</td>
                 <td style="width:13%;">{% if res.open %}Yes{% else %}No{% endif %}</td>
                 <td style="width:13%;">{% if res.click %}Yes{% else %}No{% endif %}</td>
@@ -243,6 +243,7 @@
                     </tr>
                 </table>
                 {% endif %}
+                
             {% endif %}
         {% endfor %}
         
