export fix result.details 5

--- a/summary/export_templates/pdf.html
+++ b/summary/export_templates/pdf.html
@@ -129,7 +129,7 @@
         <br>
         <h3>Campaign Results For: {{campaign.name}}</h3>
         <p>Status: {{campaign.status}}</p>
-        <p>Create: {{campaign.create_at}}</p>
+        <p>Create: {{campaign.create_date}}</p>
         <p>Started: {{campaign.launch_date}}</p>
         <p>Completed: {{campaign.complete_date}}</p>
         <br>
