--- a/summary/export_templates/pdf.html
+++ b/summary/export_templates/pdf.html
@@ -129,9 +129,9 @@
         <br>
         <h3>Campaign Results For: {{campaign.name}}</h3>
         <p>Status: {{campaign.status}}</p>
-        <p>Create: {{campaign.create_date}}</p>
+        <p>Create: {{campaign.created_date}}</p>
         <p>Started: {{campaign.launch_date}}</p>
-        <p>Completed: {{campaign.complete_date}}</p>
+        <p>Completed: {{campaign.completed_date}}</p>
         <br>
         <h3>Campaign Details</h3>
         <p>From: {{envelop_sender}}</p>
