--- a/summary/export_templates/pdf.html
+++ b/summary/export_templates/pdf.html
@@ -173,7 +173,7 @@
                 <td style="width:20%;">{{res.email}}</td>
                 <td style="width:13%;">{% if res.open %}Yes{% else %}No{% endif %}</td>
                 <td style="width:13%;">{% if res.click %}Yes{% else %}No{% endif %}</td>
-                <td style="width:13%;">{% if res.sunmit %}Yes{% else %}No{% endif %}</td>
+                <td style="width:13%;">{% if res.submit %}Yes{% else %}No{% endif %}</td>
                 <td style="width:13%;">{% if res.report %}-{% else %}-{% endif %}</td>
                 <td style="width:13%;">{% if res.os %}{{res.os}}{% else %}-{% endif %}</td>
                 <td style="width:13%;">{% if res.browser %}{{res.browser}}{% else %}-{% endif %}</td>
