--- a/summary/export_templates/pdf.html
+++ b/summary/export_templates/pdf.html
@@ -240,7 +240,7 @@
                         <td style="width:16%;">{{target.location}}</td>
                         <td style="width:16%;">{{target.browser}}</td>
                         <td style="width:16%;">{{target.os}}</td>
-                        <td style="width:16%;">{{target.payload}}</td>
+                        <td style="width:16%;">{{target.playload}}</td>
                     </tr>
                 </table>
                 {% endif %}
